--- a/sass/content.scss
+++ b/sass/content.scss
@@ -1,250 +1,14 @@
-// Hero Section
 
-.begginer {
-  margin-top: 300px;
-  margin-bottom: 50px;
-  @include mobile {
-    margin-top: 100px;
-  }
 
-  .b-content {
-    display: flex;
-    gap: 20px;
-    @include mobile {
-      flex-direction: column;
-    }
-    .title {
-      h1 {
-        font-size: 80px;
-        @include mobile {
-          font-size: 50px;
-        }
-      }
-      width: 40%;
-      @include mobile {
-        width: 100%;
-      }
-    }
-    .text {
-      width: 60%;
-      p {
-        font-size: 25px;
-        line-height: 40px;
-        @include mobile {
-          font-size: 20px;
-          line-height: 30px;
-        }
-      }
-      @include mobile {
-        width: 100%;
-      }
-    }
-  }
+.blocker {
+
 }
 
-.banner {
-  height: 450px;
-  @include mobile {
-    height: 250px;
+.b-header { 
+  h1 { 
+    font-size: 80px; 
   }
-}
-
-
-
-
-// Work Section
-.work {
-  margin: 100px 0;
-  .work-head {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 50px;
-
-    h2 {
-      font-size: 80px;
-      @include mobile {
-        font-size: 50px;
-      }
-    }
+  p {
+    font-size: 25px;
   }
-
-  .work-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 15px;
-    @include mobile {
-      grid-template-columns: 1fr;
-    }
-
-    .work-item {
-      position: relative;
-      height: 460px;
-
-
-      .item-content{
-        position: absolute;
-        bottom: 0;
-        z-index: 5;
-        padding: 35px;
-        color: $color-white;
-      }
-
-      &::before {
-        content: "";
-        position: relative;
-        display: flex;
-        width: 100%;
-        height: 100%;
-        background: transparent linear-gradient(182deg, #00000000 0%, #000000 100%) 0% 0% no-repeat padding-box;
-        z-index: 1;
-      }
-
-    }
-  }
-}
-
-
-.services {
-  margin: 100px 0;
-  .services-head {
-    display: flex;
-    justify-content: space-between;
-    h2 {
-      font-size: 80px;
-    }
-  }
-
-  .s-services {
-    margin-top: 50px;
-
-    .s-item {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 50px;
-
-      .title, .content {
-        width: 100%;
-      }
-
-      .title {
-        padding-left: 70px;
-      }
-      h3 {
-        font-size: 50px;
-        margin-bottom: 20px;
-      }
-      p {
-        font-size: 25px;
-        line-height: 40px;
-      }
-    }
-  }
-}
-
-
-
-
-
-.grid-projects {
-
-  .myBtnContainer {
-    display: flex;
-    gap: 20px;
-  }
-
-  /* Style the buttons */
-  .btn {
-    font-family: $font-secondary;
-    color: $color-red;
-    font-size: 40px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    margin: 20px 0;
-    @include mobile {
-      margin: 5px 0;
-    }
-  }
-  
-  /* Add a light grey background on mouse-over */
-  .btn:hover {
-    background-color: #ddd;
-  }
-  
-  /* Add a dark background to the active button */
-  .btn.active {
-    color: $color-red;
-    text-decoration: underline;
-  }
-
-
-
-  .show {
-    display: block;
-  }
-  
-
-  .p-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr; // Default para primeira linha
-    gap: 16px;
-    // Responsivo no mobile
-    @media (max-width: 768px) {
-      grid-template-columns: 1fr; // Colunas se ajustam a 1fr no mobile
-      gap: 12px;
-    }
-  }
-}
-
-.p-item {
-  position: relative;
-  width: 100%;
-  height: 500px;
-  @include mobile {
-    height: 300px;
-  }
-  &::after {
-    content: "";
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background: transparent linear-gradient(182deg, #00000000 0%, #000000 100%) 0% 0% no-repeat padding-box;
-    z-index: 1;
-  }
-}
-
-.item-content {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  color: $color-white;
-  bottom: 0;
-  z-index: 5;
-}
-
-.filterDiv {
-  float: left;
-  width: 100%;
-  gap: 1;
-  @include mobile {
-    width: 100%;
-  }
-  display: none; /* Hidden by default */
-}
-
-.p-content {
-  display: grid;
-  grid-template-columns: 1fr 1fr; /* Layout padrão com duas colunas */
-  gap: 16px;
-}
-
-.filterDiv {
-  display: none; /* Ocultado por padrão */
-}
-
-.filterDiv.show {
-  display: block; /* Exibido quando a classe "show" é aplicada */
 }
