--- a/sass/content.scss
+++ b/sass/content.scss
@@ -1,14 +1,31 @@
 
 
 .blocker {
+  margin: 100px 0;
 
 }
 
 .b-header { 
+  width: 80%;
   h1 { 
-    font-size: 80px; 
+    font-size: 80px;
+    @include mobile {
+      font-size: 50px;
+    }  
   }
   p {
-    font-size: 25px;
+    font-size: 35px;
+    line-height: 1.2;
+    @include mobile {
+      font-size: 25px;
+    }
+  }
+}
+
+.b-content {
+  width: 100%;
+  height: 550px;
+  @include mobile {
+    height: 250px;
   }
 }
