--- a/sass/content.scss
+++ b/sass/content.scss
@@ -33,3 +33,41 @@
     height: 250px;
   }
 }
+
+.info {
+  margin: 100px 0;
+}
+
+.i-header { 
+  width: 80%;
+  @include mobile {
+    width: 100%;
+  }
+  h1 { 
+    font-size: 80px;
+    @include mobile {
+      font-size: 50px;
+    }  
+  }
+  p {
+    font-size: 35px;
+    line-height: 1.2;
+    margin: 20px 0;
+    @include mobile {
+      font-size: 25px;
+    }
+  }
+}
+
+.i-tags {
+  width: 50%;
+  @include mobile {
+    width: 100%;
+  }
+
+  .item-tag {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid $color-black;
+  }
+}
