--- a/sass/content.scss
+++ b/sass/content.scss
@@ -11,6 +11,7 @@
     width: 100%;
   }
   h1 { 
+    color: $color-red;
     font-size: 80px;
     @include mobile {
       font-size: 50px;
@@ -71,3 +72,17 @@
     border-bottom: 1px solid $color-black;
   }
 }
+
+
+.projects {
+
+}
+
+.p-item {
+  width: 100%;
+  height: 550px;
+  @include mobile {
+    height: 250px;
+  }
+}
+
