--- a/sass/content.scss
+++ b/sass/content.scss
@@ -3,16 +3,16 @@
 .hero {
   position: relative;
   height: 98dvh;
-
+  
   .hero-content {
     position: absolute;
     width: 40%;
     color: white;
-    bottom: 50%;
+    bottom: 0;
 
     h1 {
       font-size: 80px;
-      line-height: 1.3;
+      line-height: 1.1;
       color: white;
 
       img {
@@ -25,15 +25,24 @@
     }
 
     p {
-      margin: 50px 0;
+      margin: 20px 0;
     }
 
     
     .button {
+      position: relative;
       background-color: white;
       padding: 15px 30px;
       color: black;
       border-radius: 50px;
+    }
+    &::after {
+      content: '';
+      background-color: white;
+      width: 50px;
+      height: 50px;
+      position: absolute;
+      border-radius: 50%;
     }
   }
 }
